git subrepo clone --force git://github.com/dnmfarrell/Pod-Perl5.git dnmfarrell/Pod-Perl5
subrepo:
  subdir:   "dnmfarrell/Pod-Perl5"
  merged:   "b7bda81"
upstream:
  origin:   "git://github.com/dnmfarrell/Pod-Perl5.git"
  branch:   "master"
  commit:   "b7bda81"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/dnmfarrell/Pod-Perl5/test-corpus/formatting_codes.html
+++ b/dnmfarrell/Pod-Perl5/test-corpus/formatting_codes.html
@@ -1,18 +1,18 @@
 <html>
 <body>
 
-<p><i>this text is an example of inline italicised/emphasised</i></p>
+<p><em>this text is an example of inline italicised/emphasised</em></p>
 
-<p><i>this text is italicised/emphasised 
+<p><em>this text is italicised/emphasised 
 across 
-newlines</i></p>
+newlines</em></p>
 
-<p>This paragraph has <i>italicised words</i> in it</p>
+<p>This paragraph has <em>italicised words</em> in it</p>
 
-<p>This paragraph has inline <i>italicised
-words</i> breaking across a newline</p>
+<p>This paragraph has inline <em>italicised
+words</em> breaking across a newline</p>
 
-<p><i>bolded <b>words</b> within italics!</i></p>
+<p><em>bolded <strong>words</strong> within italics!</em></p>
 
 <p>Run this <code>program</code></p>
 
