--- a/dnmfarrell/Pod-Perl5/test-corpus/readme_example.html
+++ b/dnmfarrell/Pod-Perl5/test-corpus/readme_example.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<p><i>This is a <b>realistic</b> document for testing parsing on</i></p>
+<p><em>This is a <strong>realistic</strong> document for testing parsing on</em></p>
 
 <h1>NAME</h1>
 
@@ -16,7 +16,7 @@
 
 <h1>DESCRIPTION</h1>
 
-<p>This is a Perl6 module for parsing <b>Perl 5</b> pod. The grammar for this module lives at <code>Pod::Perl5::Grammar</code>.</p>
+<p>This is a Perl6 module for parsing <strong>Perl 5</strong> pod. The grammar for this module lives at <code>Pod::Perl5::Grammar</code>.</p>
 
 <h1>SYNOPSIS</h1>
 
@@ -49,10 +49,11 @@ my $match = Pod::Perl5::parse_string($pod);</pre>
     <li><a href="https://github.com">https://github.com</a> should just be a pure url (text and href equal)</li>
   </ol>
 
-  <li><a href="http://perldoc.perl.org/perlpod.html">perlpod</a> <i>should</i> convert into a link to perlpod</li>
+  <li><a href="http://perldoc.perl.org/perlpod.html">perlpod</a> <em>should</em> convert into a link to perlpod</li>
 </ul>
 
 <p>This code lives on <a href="https://github.com/dnmfarrell/Pod-Perl5">GitHub</a></p>
+
 
 </body>
 </html>
